--- a/install
+++ b/install
@@ -1,8 +1,7 @@
 #!/bin/bash
 cp ./lsql /bin/lsql
 chmod +x /bin/lsql
-mkdir /usr/share/LazySQL/
+mkdir -p /usr/share/LazySQL/
 cp -r * /usr/share/LazySQL/
 cp .functions /usr/share/LazySQL/
 exec bash lsql
-
