--- a/install
+++ b/install
@@ -11,6 +11,6 @@ tput rmso;
 sleep 4
 
 ##install counter, no data exchanged. Use ## to disable.##
-curl -s "https://counter7.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=fp3gxwlcz273a7m4j8s55mklybumrt1t" > /dev/null
+curl -s "https://www.stat-counter.org/count/2iug" > /dev/null
 
 exit 0
